--- a/html/HomePage.html
+++ b/html/HomePage.html
@@ -24,16 +24,16 @@
                         <a href="#">關於我們</a>
                     </div>
                     <div class="navtab">
-                        <a href="#">認識我們</a>
+                        <a href="../html/Coach.html">認識教練</a>
                     </div>
                     <div class="navtab">
-                        <a href="#">環境介紹</a>
+                        <a href="../html/Environment.html">環境介紹</a>
                     </div>
                     <div class="navtab">
                         <a href="#">最新消息</a>
                     </div>
                     <div class="navtab">
-                        <a href="#">課程介紹</a>
+                        <a href="../html/ClassIntroduce.html">課程介紹</a>
                     </div>
                     <div class="navtab">
                         <a href="#">知識專欄</a>
