--- a/html/IndexPage.html
+++ b/html/IndexPage.html
@@ -36,7 +36,7 @@
                         <a class="navlinka" href="#">最新消息</a>
                     </div>
                     <div class="navtab">
-                        <a class="navlinka" href="#">課程介紹</a>
+                        <a class="navlinka" href="../html/ClassIntroduce.html">課程介紹</a>
                     </div>
                     <div class="navtab">
                         <a class="navlinka" href="#">知識專欄</a>
